cfroutesync/integration/fixtures/invalid-virtual-service.yaml
# this is a virtual service that would be rejected by the istio-galley validatingwebhookconfiguration
# we'll attempt to install it in order to verify that the test environment has the admission controller
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: some-name
  namespace: default
spec:
  hosts: [ does-not-matter ]
  http:
    - route:
        # two destinations, but neither has weight
        # this should be rejected by galley
        - destination:
            host: some-service
        - destination:
            host: some-service
