cfroutesync/integration/fixtures/istio-validating-admission-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    istio: galley
  name: istio-galley
webhooks:
- clientConfig:
    # cat ./galley-certs/galley-ca.crt | base64
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM2RENDQWRDZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFVTVJJd0VBWURWUVFERXdsbllXeHMKWlhrdFkyRXdIaGNOTVRreE1ESTBNVGt4T1RFMVdoY05NakV3TkRJME1Ua3hPVEUwV2pBVU1SSXdFQVlEVlFRRApFd2xuWVd4c1pYa3RZMkV3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRG5leS9VCnN2Rkl6dWdRSVQvbjExeEExU01ZaTRnSUx5TkVpeHNwc2dRM2xuM3dzbjM1RGYra0Q4VHIxUFUvS2MxRnhLVGUKUjlwYWFLcWg1NkJMSjdqMy9uQ0dRMUpMc1NyUVRhWjNtdEMzWDhOYmZrM24vQ0hiWExLR2dBZ0NKWk5yL3ZqbApGS3RwbThiVDNPK0 [...]
    url: https://127.0.0.1:443/admitpilot
#    service:
#      name: istio-galley
#      namespace: istio-system
#      path: /admitpilot
  failurePolicy: Fail
  name: pilot.validation.istio.io
  namespaceSelector: {}
  rules:
  - apiGroups:
    - config.istio.io
    apiVersions:
    - v1alpha2
    operations:
    - CREATE
    - UPDATE
    resources:
    - httpapispecs
    - httpapispecbindings
    - quotaspecs
    - quotaspecbindings
  - apiGroups:
    - rbac.istio.io
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - '*'
  - apiGroups:
    - authentication.istio.io
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - '*'
  - apiGroups:
    - networking.istio.io
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - destinationrules
    - envoyfilters
    - gateways
    - serviceentries
    - sidecars
    - virtualservices
  sideEffects: None
