cfroutesync/integration/fixtures/routebulksync.yaml
apiVersion: apps.cloudfoundry.org/v1alpha1
kind: RouteBulkSync
metadata:
  name: route-bulk-sync
spec:
  selector:
    matchLabels:
      cloudfoundry.org/route-bulk-sync: "true"
  template:
    metadata:
      labels:
        cloudfoundry.org/route-bulk-sync: "true"
